--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Preline UI -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/preline@2.0.3/dist/preline.min.css" />
+    <link rel="stylesheet" href="./common/styles/variants.min.css" />
     
     <!-- 自定义TailwindCSS配置 -->
     <script>
@@ -109,7 +109,7 @@
     </script>
 
     <!-- 编译后的 CSS -->
-    <link rel="stylesheet" href="../../../common/styles/output.css">
+    <link rel="stylesheet" href="./common/styles/output.css">
 
     <!-- 图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -797,14 +797,7 @@
     </button>
 
     <!-- Preline UI 初始化 -->
-    <script src="https://cdn.jsdelivr.net/npm/preline@2.0.3/dist/preline.min.js"></script>
-    <script>
-        // 初始化Preline UI组件
-        document.addEventListener('DOMContentLoaded', () => {
-            // 此处可以放置手动初始化Preline组件的代码
-            // Preline会自动初始化页面上的所有组件
-        });
-    </script>
+    <script src="../common/js/preline.min.js"></script>
 
     <!-- 导航和主题切换脚本 -->
     <script src="common/js/navigation.js"></script>
