在404.html和index.html中添加linkValidator.js脚本，以增强链接验证功能，提升用户体验。

--- a/404.html
+++ b/404.html
@@ -241,6 +241,7 @@
     <!-- 导航和主题切换脚本 -->
     <script src="./common/js/navigation.js"></script>
     <script src="./common/js/theme.js"></script>
+    <script src="./common/js/linkValidator.js"></script>
 </body>
 
 </html> 
