--- a/index.html
+++ b/index.html
@@ -802,6 +802,7 @@
     <!-- 导航和主题切换脚本 -->
     <script src="common/js/navigation.js"></script>
     <script src="common/js/theme.js"></script>
+    <script src="common/js/linkValidator.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
