更新index.html、llama和theory模型页面，添加linkValidator.js脚本以增强链接验证功能，优化页面结构和样式，提升用户体验和可维护性。

--- a/models/llama/index.html
+++ b/models/llama/index.html
@@ -414,8 +414,15 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-    <!-- Common Scripts -->
+    <!-- Preline UI 初始化 -->
+    <script src="../../common/js/preline.min.js"></script>
+    
+    <!-- 导航和主题切换脚本 -->
+    <script src="../../common/js/navigation.js"></script>
     <script src="/common/js/theme.js"></script>
+
+    <!-- 链接验证器 -->
+    <script src="common/js/linkValidator.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
