--- a/models/theory/index.html
+++ b/models/theory/index.html
@@ -544,6 +544,9 @@
     <script src="../../common/js/navigation.js"></script>
     <script src="../../common/js/theme.js"></script>
 
+    <!-- 链接验证器 -->
+    <script src="../../common/js/linkValidator.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // 初始化主题管理器
