--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             <span>2023-至今</span>
                         </div>
                     </div>
-                    <a href="models/llama.html" class="model-card-button">
+                    <a href="models/llama/index.html" class="model-card-button">
                         查看详情
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
@@ -539,7 +539,7 @@
                             <span>2017</span>
                         </div>
                     </div>
-                    <a href="models/transformer.html" class="model-card-button">
+                    <a href="models/transformer/index.html" class="model-card-button">
                         查看详情
                         <i class="fas fa-arrow-right ml-2"></i>
                     </a>
