--- a/models/transformer/index.html
+++ b/models/transformer/index.html
@@ -44,11 +44,11 @@
                 </a>
             </div>
 
-            <nav class="hidden md:flex items-center space-x-1">
+            <nav class="hidden md:flex items-center space-x-4">
                 <a href="../../index.html" class="nav-link">
                     首页
                 </a>
-                <a href="../theory/index.html" class="nav-link-active">
+                <a href="../../models/theory/index.html" class="nav-link">
                     大模型原理
                 </a>
                 <a href="../../applications/index.html" class="nav-link">
@@ -57,7 +57,7 @@
                 <a href="../../index.html#components" class="nav-link">
                     核心组件
                 </a>
-                <a href="../../index.html#about" class="nav-link">
+                <a href="../../about/index.html" class="nav-link">
                     关于
                 </a>
             </nav>
